fix viewForm overflow

--- a/src/app/pages/view/view.component.css
+++ b/src/app/pages/view/view.component.css
@@ -1,4 +1,5 @@
 ::ng-deep.form-builder{
 width: 60% !important;
 height: 100vh !important;
+overflow-y: scroll !important;
 } 
